[package]
name = "oram_smst"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.5.0"
clap = "4.5.27"
csv = "1.3.1"
dashmap = "6.1.0"
hex = { version = "0.4.3", features = ["serde"] }
hkdf = "0.12.4"
kimchi = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
num-bigint = "0.4.6"
o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
prost = "0.13.4"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = "3.12.0"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm-bindgen = "0.2.100"

[build-dependencies]
tonic-build = "0.12.3"
